[project]
name = "introduction-to-git-and-github"
version = "0.1.0"
description = "Introductory assignment to learn about Git, GitHub, and submitting assignments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "ipython>=9.0.0"
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
